fix: adjust FluxDataTable slots and remove unnecessary CSS gap in Menu module.

--- a/packages/components/src/css/component/Menu.module.scss
+++ b/packages/components/src/css/component/Menu.module.scss
@@ -33,7 +33,6 @@
 
     display: flex;
     flex-flow: column;
-    gap: 1px;
 }
 
 .menuItem {
